---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: ???
  Features:
    - Moved "Enter/exit vehicles from spidertron" configuration into Per player settings
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 22 March 2021
  Features:
    - Alt + Click with spidertron remote to activate pathfinder which automatically navigates around lakes
  Changes:
    - Simhelper is now optional
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 19 February 2021
  Features:
    - New 'Tips & Tricks' simulation
    - French localisation (thanks sephrat!)
  Bugfixes:
    - Fixed passenger (player 2) being teleported back into spidertron after reactivation
    - Fixed interference with Warptorio2 Expansion's Marvin (and other non-minable spidertrons)
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 17 January 2021
  Compatibility:
    - Fixed spidertron getting stuck on top of a companion drone from Companion Drones
  Bugfixes:
    - Fixed other players being able to get in a travelling spidertron
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 14 January 2021
  Changes:
    - Setting for using 'U' to enter/exit vehicles from spidertron now defaults to off because 1.1.9 makes exiting spidertrons with 'Enter' much more reliable
  Bugfixes:
    - Fixed player getting stuck in an entity (eg rocket silo or train carriage) after using 'U' to toggle spidertron
    - Fixed spidertron on vehicle being rendered on the same layer as alt-mode icons causing inconsistent visibility and flickering
    - Fixed spidertron name being lost when entering vehicles