@@ -1,5 +1,6 @@
 require "prototypes.spidertron-transitions"
 require "prototypes.simulations"
+require "prototypes.shortcuts"
 
 local direct_control = {
   type = "custom-input",
