@@ -3,12 +3,16 @@ spidertron-enhancements-use-alt-spidertron-remote=Order spidertron with pathfind
 spidertron-enhancements-enter-vehicles=Toggle spidertron driving
 spidertron-enhancements-spidertron-pipette=Spidertron pipette tool
 spidertron-enhancements-open-vehicle-inventory=Open vehicle GUI
+spidertron-enhancements-recall-shortcut=Call last used spidertron
 
 
 [controls-description]
 spidertron-enhancements-use-alt-spidertron-remote=Used with spidertron remote to order the connected spidertron using the pathfinder.
-spidertron-enhancements-enter-vehicles=Result depends on whether you are in/near a vehicle or not and can be configured in mod settings. Do not set to be the same as the vanilla control [font=default-bold]Enter/leave vehicle[/font] (__CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__).
+spidertron-enhancements-enter-vehicles=Result depends on whether you are in/near a vehicle or not and can be configured in mod settings.\n[color=red]Do not set to the same as the vanilla control [font=default-bold]Enter/leave vehicle[/font] (__CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__)[/color].
 spidertron-enhancements-spidertron-pipette=Picks a remote from your inventory that is connected to the currently selected spidertron and places it in your cursor.
+
+[shortcut-name]
+spidertron-enhancements-recall-shortcut=Call last used spidertron
 
 [mod-setting-name]
 spidertron-enhancements-enter-entity=Enter/exit vehicles from spidertron with __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ or __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ [img=info]
@@ -36,6 +40,7 @@ spidertron-enhancements-spidertron-remote-append=__1__\n[font=default-semibold][
 [cursor-message]
 spidertron-enhancements-remote-not-found=Connected remote not found
 spidertron-enhancements-entity-not-spidertron=Entity is not a spidertron
+spidertron-enhancements-no-last-spidertron=No spidertron found
 
 [tips-and-tricks-item-name]
 spidertron-enhancements=Spidertron Enhancements
