@@ -2,6 +2,7 @@
 Version: 1.3.1
 Date: ???
   Features:
+    - Press `Alt + F` or click on the shortcut to call your most recently driven spidertron to you
     - Moved "Enter/exit vehicles from spidertron" configuration into Per player settings
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
